src/components/CaseStudy/CaseStudy.scss
@import 'sass-includes';

.casestudy__modal {
  .modal__close {
    .icon-hamburger {
      float: left;
      // media queries
      @include breakpoint($mobile-lg) {
        float: right;
      }
    }

    .icon-hamburger.close-icon span {
      background: $white;
      // media queries
      @include breakpoint($mobile-lg) {
        background: $black;
      }
    }
  }

  .modal__content {
    padding-bottom: 22rem;
    // media queries
    @include breakpoint($mobile-lg) {
      padding-bottom: 11.4rem;
    }
  }
}

.casestudy__title {
  top: 45%;
  transform: translateY(-50%);
  position: relative;

  > div > div {
    opacity: 0;
  }
}

.modal__close.row {
  padding-left: 2.8rem;
  padding-right: 2.8rem;
  width: auto;
  // media queries
  @include breakpoint($mobile-sm) {
    padding-left: 1.8rem;
  }
}

.copy--container {
  padding-top: 10rem;
  padding-bottom: 15rem;
  // media queries
  @include breakpoint($mobile-lg) {
    padding-top: 5rem;
    padding-bottom: 7rem;
  }
}

.video-container {
  background-color: #FFFFFF;
  text-align: center;
  padding: 0;
  margin: 0 auto;
  width: 100%;
  height: auto;
}

.video-image {
  width: 100%;
  position: absolute;
}

.video-container video {
  width: 100%;
  height: auto;
  display: block;
  margin: 0;
}

.casestudy__name {
  color: $medium-gray;
  padding-top: 4.1rem;
  //media queries
  @include breakpoint($mobile-lg) {
    padding-top: 3.2rem;
  }
}

.casestudy__scrollarrow {
  position: absolute;
  bottom: 8rem;
  opacity: 0;
  animation: pulse 6s;
  animation-delay: 1.2s;
  width: 3.2rem;
  cursor: pointer;
   //media queries
  @include breakpoint($mobile-lg) {
    bottom: 0;
  }
}

@keyframes pulse {
  0% {
    opacity: 0;
    bottom: 5rem;
  }
  1.25% { opacity: 0.3; }

  5% {
    opacity: 0.3;
    bottom: 2rem;
  }

  12.5% {
    opacity: 0.3;
    bottom: 4rem;
  }

  17.25% {
    opacity: 0.3;
    bottom: 2rem;
  }

  23.75% {
    opacity: 0.3;
    bottom: 3rem;
  }

  30% {
    opacity: 0.3;
    bottom: 2rem;
  }

  37.5% {
    opacity: 0.3;
    bottom: 4rem;
  }

  45% {
    opacity: 0.3;
    bottom: 2rem;
  }

  99.5% {
    // opacity: 0;
    bottom: 2rem;
  }
}

.casestudy__next--text {
  padding-left: 8rem;
  // media queries
  @include breakpoint($mobile-lg) {
    padding-left: 1rem;
  }
}

.casestudy__next {
  border-left: 8rem solid;
  background-color: $light-gray;
  cursor: pointer;
  width: calc(100% + 8rem);
  bottom: 0;
  left: -8rem;
  position: absolute;
  z-index: 2;
  // media queries
  @include breakpoint($mobile-lg) {
    border-left: 1rem solid;
    width: calc(100% + 1rem);
    left: -1rem;
  }

  .row {
    padding-top: 5.3rem;
    padding-bottom: 5.3rem;
    // media queries
    @include breakpoint($mobile-lg) {
      padding-top: 3.3rem;
      padding-bottom: 3.3rem;
    }
  }
}

.casestudy__heading {
  max-width: 132rem;
  height: calc(100vh - 8.6rem);
  position: relative;
  // media queries
  @include breakpoint($tablet-lg) {
    height: calc(100vh - 8.2rem);
  }
  @include breakpoint($mobile-lg) {
    height: calc(100vh - 9.2rem);
  }
  @include breakpoint($mobile-sm) {
    height: calc(100vh - 8.9rem);
  }
  @media only screen and (max-height: 430px) {
    height: auto;
  }

  .casestudy__title {
    font-size: 6rem;
    //media queries
    @media only screen and (max-height: 430px) {
      top: 0;
      transform: none;
      padding: 3rem 0 12rem;
    }

    @include breakpoint(750px, max-height) {
      font-size: 5.2rem;
    }

    @include breakpoint(600px, max-height) {
      font-size: 4.2rem;
    }

    @include breakpoint($desktop-sm) {
      font-size: 6rem;
      @include breakpoint(1000px, max-height) {
        font-size: 5.2rem;
      }
      @include breakpoint(750px, max-height) {
        font-size: 4.2rem;
      }
    }

    @include breakpoint($tablet-lg) {
      font-size: 5.2rem;
      @include breakpoint(1000px, max-height) {
        font-size: 4.2rem;
      }
      @include breakpoint(750px, max-height) {
        font-size: 3.5rem;
      }
    }
    @include breakpoint($mobile-lg) {
      font-size: 4.2rem;
      margin-top: -2rem;
    }
    @include breakpoint($mobile-sm) {
      font-size: 2.8rem;
    }
    @include breakpoint($mobile-xxsm) {
      font-size: 2.4rem;
    }
  }
}

.video--laptop {
  .video-container {
    padding: 6.2% 0 8%;
    max-width: 60%;
  }
}

.video--ipad {
  .video-container {
    max-width: 36.5%;
    padding: 9.1% 0;
    // media queries
    @include breakpoint($tablet-lg) {
      max-width: 42.5%;
    }
    @include breakpoint($mobile-lg) {
      max-width: 57.5%;
      padding: 14.1% 0;
    }
  }
}

.video--iphone {
  .video-container {
    max-width: 23.5%;
    padding: 11.6% 0;
    // media queries
    @include breakpoint($tablet-lg) {
      max-width: 27%;
      padding: 13% 0;
    }
    @include breakpoint($mobile-lg) {
      max-width: 36.7%;
      padding: 17.8% 0;
    }
  }
}

